Alignment fixes task/796

--- a/Product/WebApp/client/scss/_talent.scss
+++ b/Product/WebApp/client/scss/_talent.scss
@@ -36,7 +36,7 @@
 
     .addEditNote {
         text-align: left;
-        padding-top: 3px;
+        padding-top: 10px;
         padding-left: 0px;
     }
 
